# TopoteinWorkshop

./: .gitignore  .gitmodules  README.md  citation.bib  environment.yaml  note.md  pyproject.toml
docs/source/: index.rst  overview.rst
docs/source/modules/: proteinworkshop.custom_types.rst
notebooks/: adding_new_model_tutorial.ipynb  customizing_existing_dataset_tutorial.ipynb  model_dev_template.ipynb  test.ipynb
proteinworkshop/: __init__.py  constants.py  custom_types.py  embed.py  finetune.py  train.py  train_vq_vae.py  types.py  visualise.py
proteinworkshop/config/: embed.yaml  train.yaml  train_vq_vae.yaml
proteinworkshop/config/aux_task/: nn_sequence_3di.yaml
proteinworkshop/config/dataset/: cath_aligns.yaml  cath_v4_4.yaml
proteinworkshop/config/decoder/: node_recon.yaml  threeDi_type.yaml
proteinworkshop/config/encoder/: egnn_128.yaml  etnn.yaml  etnn_original.yaml  gcpnet_la.yaml  gvp_fixed.yaml  gvp_fixed_s.yaml  gvp_la.yaml  gvp_la_s.yaml  tcpnet.yaml  tcpnet_simple.yaml  tcpnet_sse.yaml  tcpnet_v0.yaml  tcpnet_v0_edge_att.yaml  tcpnet_v1.yaml  test.yaml  topotein_net.yaml  topotein_v0.yaml  topotein_v1.yaml  tvp.yaml
proteinworkshop/config/features/: ca_bb_3di.yaml  ca_bb_3di_aligns.yaml  ca_bb_sse.yaml  ca_bb_sse_3di.yaml  ca_bb_struct.yaml  ca_sc_sse.yaml
proteinworkshop/config/launcher/: csd3_ampere.yaml  local.yaml
proteinworkshop/config/sweeps/: topotein_baseline_fold.yaml  topotein_baseline_go.yaml
proteinworkshop/config/task/: backbone_dihedral_angle_prediction.yaml  binding_site_identification.yaml  multilabel_graph_classification.yaml  multilabel_graph_classification_f1max.yaml  ppi_site_prediction.yaml  reconstruction.yaml  sequence_denoising.yaml  sequence_denoising_3Di.yaml  sequence_denoising_3di.yaml  sequence_structure_denoising.yaml  structure_denoising.yaml  torsional_denoising.yaml
proteinworkshop/config/trainer/: default.yaml
proteinworkshop/config/transforms/: attach_3di.yaml  default.yaml  nn_sequence_denoising_3di.yaml  sequence_denoising.yaml  sequence_denoising_3di.yaml
proteinworkshop/config/vq_vae/: default.yaml
proteinworkshop/configs/: config.py
proteinworkshop/data/sample_proteins/: 1a0aA00.pt  1a0cA00.pt  1a0gA02.pt  1a0hA01.pt
proteinworkshop/datasets/: base.py  fold_classification.py  go.py
proteinworkshop/features/: edge_features.py  factory.py  node_features.py
proteinworkshop/models/: base.py  utils.py
proteinworkshop/models/decoders/: mlp_decoder.py
proteinworkshop/models/graph_encoders/: cdconv.py  dimenetpp.py  egnn.py  esm_embeddings.py  gcpnet.py  gear_net.py  gnn.py  gvp.py  identity.py  mace.py  schnet.py  tfn.py
proteinworkshop/models/graph_encoders/components/: wrappers.py
proteinworkshop/models/graph_encoders/layers/: egnn.py  gcp.py
proteinworkshop/scripts/: cli.py
proteinworkshop/tasks/: ppi_site_prediction.py  remove_missing_ca.py  sequence_denoising.py
proteinworkshop/utils/: test.py
topotein/models/graph_encoders/: tcpnet.py
topotein/models/graph_encoders/layers/: tcp.py
