[project]
name = "proteinworkshop"
version = "0.2.5"
description = ""
authors = [
    {name = "Arian Jamasb", email = "arian@jamasb.io"}
]
readme = "README.md"
requires-python = ">=3.9,<3.11"
license = {text = "MIT"}
keywords = ["proteins", "deep learning", "datasets", "benchmarks"]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering"
]

dependencies = [
    "graphein>=1.7.5",
    "loguru>=0.7.0",
    "fair-esm>=2.0.0",
    "hydra-core>=1.3.2",
    "biotite>=0.37.0",
    "e3nn>=0.5.1",
    "einops>=0.6.1",
    "beartype>=0.15.0",
    "rich>=13.5.2",
    "pytdc>=0.4.1",
    "wandb>=0.15.8",
    "torchmetrics>=1.2.0",
    "lovely-tensors>=0.1.15",
    "psutil>=5.9.5",
    "tqdm>=4.66.1",
    "jaxtyping>=0.2.24",
    "omegaconf>=2.3.0",
    "pytorch-lightning>=2.0.7",
    "lightning>=2.0.7",
    "python-dotenv>=1.0.0",
    "wget>=3.2",
    "opt-einsum>=3.3.0",
    "torch==2.6.0",
    "pyrootutils>=1.0.4",
    "torch-geometric>=2.4.0",
    "hydra-colorlog>=1.2.0",
    "foldcomp>=0.0.5",
    "mini3di>=0.2.1",
    "pydssp>=0.9.1",
]

[project.optional-dependencies]
analysis = [
    "captum>=0.6.0",
    "umap-learn>=0.5.4",
    "matplotlib>=3.7.2",
    "datashader>=0.16.0",
    "holoviews>=1.18.0",
]
dev = [
    "black>=23.7.0",
    "isort>=5.12.0",
    "poethepoet>=0.22.0",
    "ruff>=0.1.1",
    "pydocstyle>=6.3.0",
    "pre-commit>=3.5.0",
]
test = [
    "pytest",
]
docs = [
    "ipython>=8.14.0",
    "furo>=2023.8.19",
    "m2r2>=0.3.3.post2",
    "nbsphinx>=0.9.2",
    "nbsphinx-link>=1.3.0",
    "nbstripout>=0.6.1",
    "pandoc>=2.3",
    "pydocstyle>=6.3.0",
    "sphinx>=7.2.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-inline-tabs>=2023.4.21",
    "sphinxext-opengraph>=0.8.2",
    "sphinxcontrib-gtagjs>=0.2.1",
    "sphinxcontrib-jquery>=4.1",
    "watermark>=2.4.3",
    "sphinx-codeautolink>=0.15.0",
    "emoji>=2.8.0",
]

[project.scripts]
train_workshop = "proteinworkshop.train:_main"
finetune_workshop = "proteinworkshop.finetune:_main"
install_pyg_workshop = "proteinworkshop.scripts.install_pyg:_install_pyg"
workshop = "proteinworkshop.scripts.cli:main"

[project.urls]
Homepage = "https://www.proteins.sh"
Repository = "https://www.github.com/a-r-j/ProteinWorkshop"
Documentation = "https://proteins.sh"
"Bug Tracker" = "https://github.com/a-r-j/ProteinWorkshop/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }

# Code-formatting and code-style config
[tool.ruff]
select = ["E", "F", "I"]
ignore = ["F722"]
target-version = "py310"

[tool.black]
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | env
  | .env
  | venv
  | .venv
)/
'''
line-length = 79
target-version = ['py310']

[tool.isort]
skip = [".env", "env", ".venv", "venv", "data"]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 79
multi_line_output = 3
float_to_top = true
use_parentheses = true
skip_glob = "**/*.pyx"
